Add more styles

--- a/index.html
+++ b/index.html
@@ -56,10 +56,92 @@
           </li>
         </ul>
         <div class="search">
-          <input class="search-input" type="text" name="search" placeholder="Search this site" />
-          <img alt="search" role="img" aria-labelledby="caption1" class = "search-input-img" src="img/Vector.svg">
+          <input
+            class="search-input"
+            type="text"
+            name="search"
+            placeholder="Search this site"
+          />
+          <button class="search-input-img" type="button">
+            <img
+              alt="search"
+              role="img"
+              aria-labelledby="caption1"
+              class="search-input-img-i"
+              src="img/Vector.svg"
+            />
+          </button>
         </div>
       </nav>
     </header>
+
+    <main class="div-main">
+      <div class="div-main-section">
+        <div class="div-main-section-block">
+          <h1 class="div-main-section-block-title">
+            Lorem ipsum dolor sit amet
+          </h1>
+          <h2 class="div-main-section-block-subtitle">
+            Lorem ipsum dolor sit amet
+          </h2>
+          <p class="div-main-section-block-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+            tincidunt posuere eu risus cursus. Senectus sed maecenas viverra
+            tempus at. Nulla aliquam ac diam amet, sagittis, ut ultricies. Urna
+            hendrerit morbi sed gravida. Nulla aliquam ac diam amet, sagittis,
+            ut ultricies. Urna hendrerit morbi sed gravida. Lorem ipsum dolor
+            sit amet, consectetur adipiscing elit.
+          </p>
+          <button class="div-main-section-block-button">Buy Now</button>
+        </div>
+        <div class="div-main-section-img">
+          <img src="img/unsplash_W5XTTLpk1-I.jpg" alt="Main Image" srcset="" />
+        </div>
+      </div>
+      <section class="div-main-second-section">
+        <div class="div-main-second-section-about">
+          <div class="div-main-second-section-about-img">
+            <img src="img/Rectangle 570.png" alt="Main Image" srcset="" />
+          </div>
+          <div class="div-main-second-section-about-block">
+            <h2 class="div-main-second-section-about-block-title">About Us</h2>
+            <p class="div-main-second-section-about-block-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              tincidunt posuere eu risus cursus. Senectus sed maecenas viverra
+              tempus at. Nulla aliquam ac diam amet, sagittis, ut ultricies.
+              Urna hendrerit morbi sed gravida. Nulla aliquam ac diam amet,
+              sagittis, ut ultricies. Urna hendrerit morbi sed gravida. Lorem
+              ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              tincidunt posuere eu risus cursus.
+            </p>
+            <a href="#" class="div-main-second-section-about-block-link"
+              >Learn more about →</a
+            >
+          </div>
+        </div>
+
+        <div class="div-main-second-section-about">
+          <div class="div-main-second-section-about-img">
+            <img src="img/Rectangle 570.png" alt="Main Image" srcset="" />
+          </div>
+          <div class="div-main-second-section-about-block">
+            <h2 class="div-main-second-section-about-block-title">About Us</h2>
+            <p class="div-main-second-section-about-block-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              tincidunt posuere eu risus cursus. Senectus sed maecenas viverra
+              tempus at. Nulla aliquam ac diam amet, sagittis, ut ultricies.
+              Urna hendrerit morbi sed gravida. Nulla aliquam ac diam amet,
+              sagittis, ut ultricies. Urna hendrerit morbi sed gravida. Lorem
+              ipsum dolor sit amet, consectetur adipiscing elit. Eleifend
+              tincidunt posuere eu risus cursus.
+            </p>
+            <a href="#" class="div-main-second-section-about-block-link"
+              >Learn more about →</a
+            >
+          </div>
+        </div>
+      </section>
+      
+    </main>
   </body>
 </html>
