--- a/index.html
+++ b/index.html
@@ -141,7 +141,246 @@
           </div>
         </div>
       </section>
-      
+      <section class="form">
+        <div class="form-block">
+          <div class="form-block-contacts">
+            <div class="form-block-contacts-b">
+              <h2 class="form-block-contacts-b-title">Contact Us</h2>
+              <h3 class="form-block-contacts-b-subtitle">
+                Fill up the form and ur Team will get back to you within 24
+                hours. Happy to see your message!
+              </h3>
+              <div class="form-block-contacts-b-info">
+                <img src="img/bi_facebook.svg" alt="" srcset="" />
+                <a href="#" class="form-block-contacts-b-info-i"
+                  >+380 93 15 32 456</a
+                >
+              </div>
+              <div class="form-block-contacts-b-info">
+                <img src="img/bi_facebook.svg" alt="" srcset="" />
+                <a href="#" class="form-block-contacts-b-info-i"
+                  >example@gmail.com</a
+                >
+              </div>
+              <div class="form-block-contacts-b-info">
+                <img src="img/bi_facebook.svg" alt="" srcset="" />
+                <a href="#" class="form-block-contacts-b-info-i"
+                  >Pidmurma 5a, Lviv</a
+                >
+              </div>
+            </div>
+            <div class="form-block-links">
+              <a href="http://" class="form-block-links-link">
+                <img src="img/bi_facebook.svg" alt="" srcset="" />
+              </a>
+              <a href="http://" class="form-block-links-link">
+                <img src="img/bi_facebook.svg" alt="" srcset="" />
+              </a>
+              <a href="http://" class="form-block-links-link">
+                <img src="img/bi_facebook.svg" alt="" srcset="" />
+              </a>
+            </div>
+          </div>
+          <div class="form-table">
+            <div class="form-table-info">
+              <div class="form-table-info-NS">
+                <div>
+                  <label for="name"
+                    ><span class="required">*</span>First name</label
+                  >
+                  <input
+                    type="text"
+                    id="name"
+                    name="name"
+                    required
+                    placeholder="Anna"
+                  />
+                </div>
+                <div>
+                  <label for="surname"
+                    ><span class="required">*</span>Last name</label
+                  >
+                  <input
+                    type="text"
+                    id="surname"
+                    name="surname"
+                    required
+                    placeholder="Doe"
+                  />
+                </div>
+              </div>
+              <div class="form-table-info-EPH">
+                <div class="form-table-info-EPH-email">
+                  <label class="email-label" for="email">Email</label>
+                  <input
+                    type="text"
+                    id="email"
+                    name="namemaile"
+                    required
+                    placeholder="example@gmail.com"
+                  />
+                </div>
+                <div class="div-phone">
+                  <label for="phone">Phone number</label>
+                  <div class="form-table-info-EPH-phone">
+                    <select id="country-code" name="country-code">
+                      <option value="+380">+380</option>
+                      <option value="+374">+374</option>
+                    </select>
+                    <input
+                      type="tel"
+                      id="phone"
+                      name="phone"
+                      required
+                      placeholder="00 000 00 00"
+                      class="phone"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="form-table-info-checkboxes">
+                <input type="radio" name="job-role" id="ui-developer" />
+                <label for="ui-developer">UI developer</label>
+                <input type="radio" name="job-role" id="ui-ux-designer" />
+                <label for="ui-ux-designer">UI/UX Designer</label>
+                <input type="radio" name="job-role" id="accessibility-expert" />
+                <label for="accessibility-expert">Accessibility Expert</label>
+                <input type="radio" name="job-role" id="qa-engineer" />
+                <label for="qa-engineer">QA Engineer</label>
+                <input type="radio" name="job-role" id="other" />
+                <label for="other">Other</label>
+              </div>
+              <div class="form-table-info-message">
+                <label for="message">Message</label>
+                <input
+                  type="text"
+                  name="message"
+                  id="message"
+                  placeholder="Text here..."
+                />
+              </div>
+              <div class="form-table-info-terms">
+                <input
+                  type="checkbox"
+                  name="accept-terms1"
+                  id="accept-terms1"
+                />
+                <label for="accept-terms1">Accept the Terms</label>
+                <input
+                  type="checkbox"
+                  name="accept-terms2"
+                  id="accept-terms2"
+                />
+                <label for="accept-terms2">Accept the Terms2</label>
+              </div>
+              <div class="form-table-info-button">
+                <button type="submit" class="form-table-info-button-btn">
+                  Send Message
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer-main">
+        <div class="footer-main-subscribe">
+          <h2 class="footer-main-subscribe-title">PlantMe</h2>
+          <h3 class="footer-main-subscribe-subtitle">
+            Subscribe and be the first to know about our news and promotions.
+          </h3>
+          <div class="footer-main-subscribe-button">
+            <input
+              type="email"
+              name="footer-email"
+              id="footer-email"
+              placeholder="example@gmail.com"
+            />
+            <button type="submit">Subscribe</button>
+          </div>
+        </div>
+
+        <div class="footer-main-contacts">
+          <ul class="footer-main-contacts-item">
+            <li class="footer-main-contacts-item-list">
+              <a
+                href="#"
+                class="footer-main-contacts-item-list-link"
+                aria-label="About Us"
+                >About Us</a
+              >
+            </li>
+            <li class="footer-main-contacts-item-list">
+              <a
+                href="#"
+                class="footer-main-contacts-item-list-link"
+                aria-label="Contact Us"
+                >Contact Us</a
+              >
+            </li>
+            <li class="footer-main-contacts-item-list">
+              <a
+                href="#"
+                class="footer-main-contacts-item-list-link"
+                aria-label="Blog"
+                >Blog</a
+              >
+            </li>
+            <li class="footer-main-contacts-item-list">
+              <a
+                href="#"
+                class="footer-main-contacts-item-list-link"
+                aria-label="Site Map"
+                >Site Map</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="footer-main-info">
+          <h3 class="footer-main-info-title">Contacts</h3>
+          <ul class="footer-main-info-item">
+            <li class="footer-main-info-item-list">
+              <a href="#" class="footer-main-info-item-list-link"
+                >+38 063 072 0121</a
+              >
+            </li>
+            <li class="footer-main-info-item-list">
+              <a href="#" class="footer-main-info-item-list-link"
+                >plantme.store@gmail.com</a
+              >
+            </li>
+          </ul>
+          <div class="footer-main-info-img">
+            <img src="img/image 46.svg" alt="" srcset="" />
+            <img src="img/image 47.svg" alt="" srcset="" />
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footer-rights">
+        <div class="footer-rights-i">
+          <h3 class="footer-rights-info">
+            © 2022 PlantMe. All Rights Reserved
+          </h3>
+          <ul class="footer-rights-item">
+            <li class="footer-rights-item-list">
+              <a href="#" class="footer-rights-item-list-link"
+                >Privacy Policy</a
+              >
+            </li>
+            <li class="footer-rights-item-list">
+              <a href="#" class="footer-rights-item-list-link"
+                >Terms of service</a
+              >
+            </li>
+            <li class="footer-rights-item-list">
+              <a href="#" class="footer-rights-item-list-link">Language</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
