--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Accessible Page">
+    <meta name="description" content="Accessible Page" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="preload" href="img/unsplash_W5XTTLpk1-I.jpg" as="image" />
 
@@ -293,12 +293,12 @@
               </div>
               <div class="form-table-info-message">
                 <label for="message">Message</label>
-                <input
+                <textarea
                   type="text"
                   name="message"
                   id="message"
                   placeholder="Text here..."
-                />
+                ></textarea>
               </div>
               <div class="form-table-info-terms">
                 <input
